Add note api routes and note model.
