# backend/index.js
@@ -2,6 +2,8 @@
 const express = require("express");
 const connectDb = require("./config/db");
 const notebookRouter = require("./routes/notebookRoutes");
+const noteRouter = require("./routes/noteRoutes");
+
 const app = express();
 
 // configuration of the port of our webserver
@@ -15,6 +17,8 @@ app.use(express.json());
 
 
 app.use("/api/notebook", notebookRouter);
+
+app.use("/api/note", noteRouter)
 
 app.listen(PORT, () => {
     console.log(`Server started on port ${PORT}`);
