# backend/models/noteModel.js
@@ -1,0 +1,19 @@
+const mongoose = require("mongoose");
+
+// Mongodb schema for Note with timestamps
+const noteSchema = mongoose.Schema({
+  title: {
+    type: String,
+    required: true,
+  },
+  content: {
+    type: String,
+  },
+  notebookId: {
+    type: String,
+    required: true
+  }
+},{ timestamps: true }
+);
+
+module.exports = mongoose.model("Note", noteSchema);
