# docs/swagger.yaml
@@ -7,6 +7,8 @@ basePath: "/v2"
 tags:
 - name: "notebook"
   description: "Create, read, update and delete of notebooks"
+- name: "note"
+  description: "Create, read, update and delete of notes"
 schemes:
 - "http"
 paths:
@@ -15,7 +17,6 @@ paths:
       tags:
       - "notebook"
       summary: "Add a new notebook"
-      description: ""
       operationId: "addNotebook"
       consumes:
       - "application/json"
@@ -112,20 +113,140 @@ paths:
           description: "Notebook not found"
         "405":
           description: "Validation exception"
+  /api/note:
+    post:
+      tags:
+      - "note"
+      summary: "Add a new note"
+      operationId: "addNote"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Note information"
+        required: true
+        schema:
+          $ref: "#/definitions/Note"
+      responses:
+        "405":
+          description: "Invalid input"
+    get:
+      tags:
+      - "note"
+      summary: "Get notes"
+      description: "Receive notes"
+      operationId: "getNotes"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Note"
+  /api/note/{noteId}:
+    get:
+      tags:
+      - "note"
+      summary: "Get note"
+      operationId: "getNote"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Receive information about a note"
+        required: true
+        schema:
+          $ref: "#/definitions/Note"
+      responses:
+        "404":
+          description: "Note not found"
+        "405":
+          description: "Validation exception"
+    put:
+      tags:
+      - "note"
+      summary: "Update an existing note"
+      operationId: "updateNote"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "noteId"
+        in: "path"
+        description: "The note id to update"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "Note information to update"
+        required: true
+        schema:
+          $ref: "#/definitions/Note"
+      responses:
+        "404":
+          description: "Note not found"
+        "405":
+          description: "Validation exception"
+    delete:
+      tags:
+      - "note"
+      summary: "Deletes an existing note"
+      operationId: "deleteNote"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "noteId"
+        in: "path"
+        description: "The note id that needs to be deleted"
+        required: true
+        type: "string"
+      responses:
+        "404":
+          description: "Note not found"
+        "405":
+          description: "Validation exception"
 
 definitions:
   Notebook:
     type: "object"
     required:
-    - "name"
-    - "photoUrls"
+    - "title"
+    - "description"
     properties:
       id:
         type: "integer"
-        format: "int64"
+        format: "string"
       title:
         type: "string"
         example: "Distributed systems notebook"
       description:
         type: "string"
         example: "This notebook contains all information about the lecture distributed systems at DBWH Karlsruhe."
+  Note:
+    type: "object"
+    required:
+    - "title"
+    - "content"
+    - "notebookId"
+    properties:
+      id:
+        type: "integer"
+        format: "string"
+      title:
+        type: "string"
+        example: "Distributed systems"
+      content:
+        type: "string"
+        example: "The content of the node."
+      notebookId:
+        type: "string"
+        example: "The id of the notebook to assign the note to."
